update code to run