@@ -1,4 +1,5 @@
 plugins {
+    jacoco
     kotlin("jvm") version "1.4.21"
 }
 repositories {
@@ -21,6 +22,24 @@ allprojects {
 
         // Use JUnit Jupiter Engine for testing.
         testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.6"
+}
+
+tasks.test {
+    useJUnitPlatform()
+    jvmArgs("--enable-preview")
+    finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
+}
+
+tasks.jacocoTestReport {
+    dependsOn(tasks.test) // tests are required to run before generating the report
+    reports {
+        xml.isEnabled = true
+        csv.isEnabled = false
     }
 }
 
